# medai

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore.medical  1.4.0  CI_RECOVERY_SUMMARY.md  CORREÇÕES_IMPLEMENTADAS.md  COVERAGE_REPORT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALACAO.md  Makefile  OPTIMIZATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  README.new.md  SECURITY.md  TESTING_GUIDE.md  additional_tests_for_coverage.py  boost_coverage.py  boost_to_80_percent.py  check_config.py  check_final.py  ci_cd_improvements.md  complete_fix.py  create_all_tests.py  create_specific_tests.py  create_tests_fixed.py  debug_test_config.py  diagnose_pytest.py  docker-compose.yml  docker-compose.yml.backup  emergency-rollback.sh  final_80_push.py  final_push_80.py  fix_all_issues.py  fix_appointment.py  fix_config_api.py  fix_conftest_conflict.py  (+29 more)
app/: auth.py  (+11 more)
backend/: .env.example  Dockerfile  EXECUTAR_TESTES.bat  MULTI_SPECIALTY_EMR_DOCS.md  POETRY_MIGRATION.md  README.md  README_TESTS.md  TEST_NOW.bat  activate_medai.bat  alembic.ini  analyze_and_fix_remaining_issues.py  analyze_coverage_drop.py  coverage_analysis_plan.py  coverage_guardian.py  create_isolated_test.py  create_missing_modules.py  create_requirements_test.py  create_sample_data.py  create_tf_mock.py  debug_pytest_execution.py  deep_diagnostic.py  demo_multi_specialty_emr.py  direct_pytest_fix.py  fix_all_backend_issues.py  fix_all_import_errors.py  fix_all_issues.py  fix_and_measure_coverage.py  fix_config.py  fix_coverage_drop.py  fix_critical_errors.py  fix_incomplete_imports.py  fix_model_relationships.py  fix_modeltype_errors.py  fix_remaining_issues_v2.py  fix_sqlalchemy_tables.py  fix_syntax_errors.py  fix_test_discovery.py  fix_test_imports.py  fix_user_role.py  fly.toml  (+20 more)
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_security.py  c0901dc9e8ec_initial_multi_specialty_fhir_models.py
backend/app/: __init__.py  config.py  database.py  health.py  main.py  middleware.py  rbac.py  security.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/core/: celery.py  config.py  constants.py  database.py  exceptions.py  feature_flags.py  security.py
backend/app/core/auth/: session_manager.py
backend/app/core/crypto/: __init__.py  kms_manager.py
backend/app/db/: init_db.py
backend/app/fhir/: __init__.py  adapter.py
backend/app/middleware/: privacy_middleware.py
backend/app/models/: __init__.py  appointment.py  base.py  diagnosis.py  diagnostic.py  doctor_profile.py  ecg_analysis.py  ecg_record.py  exam.py  fhir_base.py  medication.py  notification.py  patient.py  prescription.py  user.py  validation.py
backend/app/monitoring/: structured_logging.py
backend/app/repositories/: base.py  base_repository.py  ecg_repository.py  notification_repository.py  user_repository.py  validation_repository.py  validation_service.py
backend/app/schemas/: __init__.py  auth.py  ecg.py  ecg_analysis.py  patient.py  user.py  validation.py
backend/app/services/: __init__.py  _init_temp.py  advanced_ml_service.py  ai_diagnostic_service.py  audit_service.py  auth_service.py  avatar_service.py  base.py  clinical_protocols_service.py  dataset_service.py  ecg_service.py  exam_request_service.py  hybrid_ecg_service.py  interpretability_service.py  laboratory_exam_service.py  medical_document_generator.py  medical_guidelines_engine.py  medical_guidelines_service.py  medical_record_service.py  ml_model_service.py  multi_pathology_service.py  multi_specialty_emr.py  notification_service.py  patient_service.py  prescription_service.py  user_service.py  validation_service.py
backend/app/standalone/: __init__.py  medical_calculations.py  validators.py
backend/app/tasks/: __init__.py  ecg_tasks.py
backend/app/utils/: __init__.py  adaptive_thresholds.py  clinical_explanations.py  data_processing.py  ecg_hybrid_processor.py  ecg_visualizations.py  file_handlers.py  health_checker.py  logging_config.py  medical_calculations.py  medical_guidelines_updater.py  memory_monitor.py  report_generator.py  security.py  signal_quality.py
backend/app/validation/: iso13485_quality.py  robustness_validation.py
backend/medai_env/: pyvenv.cfg
backend/medai_env/Scripts/: activate  activate.bat
backend/pyedflib/: __init__.py
backend/scripts/: coverage_monitor.py  setup_models.py
backend/tests/: conftest.py  conftest.py.backup  conftest.py.bak  conftest_enhanced.py  smart_mocks.py  test_80_percent_simple.py  test_actual_classes_coverage_80.py  test_additional_coverage_boost.py  test_additional_services.py  test_aggressive_80_coverage_final.py  test_ai_diagnostic_isolated.py  test_ai_diagnostic_service.py  test_ai_diagnostic_service.py.bak  test_ai_diagnostic_service_enhanced.py  test_api_comprehensive_coverage.py  test_api_endpoints.py  test_api_endpoints_100_coverage.py  test_api_endpoints_coverage.py  test_api_integration.py  test_auth_endpoints.py  test_celery_complete_coverage.py  test_clean_coverage_boost.py  test_clinical_protocols_service.py  test_comprehensive_80_percent_coverage.py  test_comprehensive_coverage_80_final.py  test_comprehensive_coverage_boost.py  test_comprehensive_zero_coverage_80.py  test_conservative_verified_80_coverage.py  test_core_modules.py  test_corrected_massive_coverage_boost.py  test_corrected_service_signatures.py  test_corrected_ultra_coverage_80.py  test_coverage_boost_80.py  test_coverage_boost_services.py  test_coverage_boost_simple.py  test_coverage_boost_simple.py.bak  test_deep_coverage_80_percent.py  test_diagnostic.py  test_e2e_comprehensive.py  test_ecg_endpoints_comprehensive.py  (+107 more)
backend/tests/fixtures/: patient_data.py
backend/tests/integration/: test_api_endpoints.py  test_api_integration.py
backend/tests/mocks/: tensorflow_mock.py
backend/tests/unit/: test_ai.py  test_api.py  test_basic.py  test_config.py  test_health.py  test_medical_guidelines.py  test_medical_records.py  test_ml_model_service.py  test_notifications.py  test_validation_service.py
(+455 files in other folders)
