[tool.poetry]
name = "spei-medical-backend"
version = "0.1.0"
description = "SPEI Medical System Backend API"
authors = ["Devin AI <devin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
